Remove workaround for QTBUG-38256